--- a/index.html
+++ b/index.html
@@ -8,37 +8,49 @@
   <title>Accessible Me</title>
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-  <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@100;500&family=Stick+No+Bills:wght@300&display=swap" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@100;500&family=Stick+No+Bills:wght@300&display=swap"
+    rel="stylesheet">
   <link rel="stylesheet" href="css/main.css">
 </head>
 
 <body>
+  <div>
+    <ul id="skipnav">
+      <li>
+        <a href="#main-content" aria-label="Skip to main content">Skip to main content</a>
+      </li>
+    </ul>
+  </div>
   <div class="container">
-    <div class="site-header">
-      <h1>Jam Box Studios</h1>
-      <div class="main-nav">
+    <header role="banner">
+      <h1 role="heading">Jam Box Studios</h1>
+      <nav role="navigation" aria-label="Main">
         <ul>
-          <li><a href="#">Home</a></li>
-          <li><a href="#">Products</a></li>
-          <li><a href="#">Reservation</a></li>
-          <li><a href="#">Studio</a></li>
+          <li><a href="index.html" aria-current="page">Home</a></li>
+          <li><a href="products.html">Products</a></li>
+          <li><a href="reservation.html">Reservation</a></li>
+          <li><a href="studio.html">Studio</a></li>
         </ul>
-      </div>
-      <img src="https://placekitten.com/1200/900" class="banner">
-    </div>
-    <div class="main-content">
-      <h1>Welcome to Jam Box</h1>
-      <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Temporibus laboriosam praesentium nostrum ipsa eveniet, officia deserunt cumque eius esse enim, ipsam accusantium autem nihil quaerat sequi perferendis optio quia veritatis.</p>
-      <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Veniam perferendis expedita sed itaque odit ipsam omnis, eos voluptates magni fugit culpa voluptatibus, inventore eaque, eligendi voluptatum! Voluptate iusto error voluptatibus.</p>
-      <div class="owner">
-        <h1>Meet the owner</h1>
+      </nav>
+    </header>
+    <img role="presentation" src="https://placekitten.com/1200/900" alt="Photograph of a kitten">
+    <main id="main-content" role="main">
+      <h2 role="heading">Welcome to Jam Box</h2>
+      <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Temporibus laboriosam praesentium nostrum ipsa
+        eveniet, officia deserunt cumque eius esse enim, ipsam accusantium autem nihil quaerat sequi perferendis optio
+        quia veritatis.</p>
+      <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Veniam perferendis expedita sed itaque odit ipsam
+        omnis, eos voluptates magni fugit culpa voluptatibus, inventore eaque, eligendi voluptatum! Voluptate iusto
+        error voluptatibus.</p>
+      <div class="owner" itemscope itemtype="https://schema.org/Person">
+        <h2 role="heading">Meet the owner</h2>
         <ul>
-          <li>Name: John Doe</li>
-          <li>Title: CEO</li>
-          <li>Email: johnjoe@jambox.ca</li>
-          <li>Phone: 613-000-0000</li>
+          <li itemprop="name">John Doe</li>
+          <li itemprop="jobTitle">CEO</li>
+          <li itemprop="email">johnjoe@jambox.ca</li>
+          <li itemprop="phoneNumber">Phone: 613-000-0000</li>
         </ul>
-        <h1>Address</h1>
+        <h2 role="heading">Address</h2>
         <p>
           Jambox Studios
           123 Guitar Road,
@@ -47,21 +59,23 @@
         </p>
       </div>
       <div class="contact-section">
-        <h1>Contact Us</h1>
-        <form action="thanks.html">
-          <label>Full Name</label>
-          <input type="text" placeholder="Full Name">
-          <input type="text" placeholder="Email">
-          <input type="text" placeholder="Subject">
-          <b>Your Message</b>
-          <textarea></textarea>
-          <button type="submit">Send</button>
+        <h2 role="heading">Contact Us</h2>
+        <form action="thanks.html" role="form" aria-label="Contact us using this form">
+          <label for="fullname">Full Name</label>
+          <input type="text" id="fullname" aria-label="Full Name" placeholder="Please type your full name here">
+          <label for="email">Email</label>
+          <input type="text" id="email" aria-label="Email" placeholder="Please type your email here">
+          <label for="subject">Subject</label>
+          <input type="text" id="subject" aria-label="Subject" placeholder="Please type your subject here">
+          <label for="message">Your Message</label>
+          <textarea id="message" aria-label="Message" placeholder="Please type your message here"></textarea>
+          <button type="submit" aria-label="Send">Send</button>
         </form>
       </div>
-    </div>
-    <div class="site-footer">
-      &copy; 2021 Jam Box Studios
-    </div>
+    </main>
+    <footer role="contentinfo">
+      <p>&copy; 2021 Jam Box Studios</p>
+    </footer>
   </div>
 </body>
 
