--- a/index.html
+++ b/index.html
@@ -47,8 +47,8 @@
         <ul>
           <li itemprop="name">John Doe</li>
           <li itemprop="jobTitle">CEO</li>
-          <li itemprop="email">johnjoe@jambox.ca</li>
-          <li itemprop="phoneNumber">Phone: 613-000-0000</li>
+          <li itemprop="email"><a href="mailto:johnjoe@jambox.ca">johnjoe@jambox.ca</a></li>
+          <li itemprop="phoneNumber">Phone: <a href="tel:+16130000000">613-000-0000</a></li>
         </ul>
         <h2 role="heading">Address</h2>
         <p>
